Add keyboard navigation
Signed-off-by: Igor Vinokur <ivinokur@redhat.com>

--- a/packages/scm/src/browser/style/index.css
+++ b/packages/scm/src/browser/style/index.css
@@ -110,6 +110,14 @@
     width: 100%;
 }
 
+.theia-scm div:focus .theia-mod-selected{
+    background: var(--theia-accent-color3);
+}
+
+.theia-scm .theia-mod-selected{
+    background: var(--theia-accent-color4);
+}
+
 .theia-scm-main-container {
     display: flex;
     flex-direction: column;
